--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -183,6 +183,15 @@
                                    placeholder="Your Debrid API key">
                         </div>
                     </div>
+                    <div id="anonymize-magnets-container" class="sm:col-span-6" style="display: none;">
+                        <div class="flex items-center">
+                            <input type="checkbox" id="anonymize-magnets" name="anonymize-magnets"
+                                   class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:ring-offset-gray-800 dark:focus:ring-blue-600">
+                            <label for="anonymize-magnets" class="ml-2 block text-sm text-gray-900 dark:text-white">
+                                Anonymiser les liens magnets
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </div>
 
