--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -317,9 +317,15 @@
                             to exclude</p>
                         <div class="mt-6 space-y-6">
                             <div class="flex items-center gap-x-3">
-                                <input oninput="" id="4k" name="4k" type="checkbox"
+                                <input oninput="" id="4K" name="4K" type="checkbox"
                                        class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                                <label for="4k" class="block text-sm font-medium mb-2 dark:text-white">4k</label>
+                                <label for="4K" class="block text-sm font-medium mb-2 dark:text-white">4K</label>
+                            </div>
+
+                            <div class="flex items-center gap-x-3">
+                                <input oninput="" id="2160p" name="2160p" type="checkbox"
+                                       class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                <label for="2160p" class="block text-sm font-medium mb-2 dark:text-white">2160p</label>
                             </div>
 
                             <div class="flex items-center gap-x-3">
