update 14 files: add redis local cache for all jackett result.

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Stremio-Jackett {% if isCommunityVersion %}Community{% endif %}</title>
+    <title>Stremio-Jackett</title>
     <style>
         /*On va ajouter la photo de fond */
         body {
