--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -140,29 +140,33 @@
 
                 <div class="border-b border-gray-900/10 dark:border-white/50 pb-12" id="redis-fields">
                     <h2 class="text-base font-semibold leading-7 text-gray-900 dark:text-white">Redis Information</h2>
-                    <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter information about
-                        your
-                        Redis server here</p>
-
+                    <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter information about your Redis server here</p>
+                
                     <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-                        <div class="sm:col-span-3">
-                            <label for="redis-host" class="block text-sm font-medium mb-2 dark:text-white">Redis
-                                Host</label>
+                        <div class="sm:col-span-2">
+                            <label for="redis-host" class="block text-sm font-medium mb-2 dark:text-white">Redis Host</label>
                             <div class="mt-2">
-                                <input oninput="" type="text" name="redis-host" id="redis-host"
-                                    autocomplete="jackett-host"
+                                <input oninput="" type="text" name="redis-host" id="redis-host" autocomplete="jackett-host"
                                     class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600"
-                                    placeholder=" without http without port">
+                                    placeholder="without http without port">
                             </div>
                         </div>
-
-                        <div class="sm:col-span-3">
+                
+                        <div class="sm:col-span-2">
                             <label for="redis-port" class="block text-sm font-medium mb-2 dark:text-white">Redis Port</label>
                             <div class="mt-2">
-                                <input oninput="" type="text" name="redis-port" id="redis-port"
-                                    autocomplete="redis-port"
+                                <input oninput="" type="number" name="redis-port" id="redis-port" autocomplete="redis-port"
                                     class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600"
                                     placeholder="6379">
+                            </div>
+                        </div>
+                
+                        <div class="sm:col-span-2">
+                            <label for="redis-expiration" class="block text-sm font-medium mb-2 dark:text-white">Cache Expiration Time (seconds)</label>
+                            <div class="mt-2">
+                                <input oninput="" type="number" name="redis-expiration" id="redis-expiration" autocomplete="redis-expiration"
+                                    class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600"
+                                    placeholder="604800">
                             </div>
                         </div>
                     </div>
